Edited Web App/UPDATED/www/main.js(Added edit item functionality) and Web App/UPDATED/www/styles/main.css(created a class for input to resolve the visibility problem when editing an item)

--- a/Web App/UPDATED/www/styles/main.css
+++ b/Web App/UPDATED/www/styles/main.css
@@ -85,5 +85,9 @@
         margin-top: 25px;
         width: 35%;
     }
+
+    .editInput {
+        height: 60px !important;
+    }
     
 }
